2005-03-13  Joe Shaw  <joeshaw@novell.com>

	* mono/ProxyBuilder.cs (BuildConstructor): Decalre a local
	variable for storing our callback in.  Update the allocation
	comments.

	* mono/Service.cs (Module): Revert some accidentally
	committed code.

2005-03-12  Joe Shaw  <joeshaw@novell.com>

	* mono/ProxyBuilder.cs (BuildFinalizer): Need to load arg 0
	onto the eval stack when removing the delegate.

2005-03-12  Joe Shaw  <joeshaw@novell.com>

	* mono/ProxyBuilder.cs: Add a finalizer to the generated proxy
	classes that disconnects the signal handler delegate from the
	service object.  Fixes a big leak of proxy objects on the
	client side of things.  Patch from Ben Maurer
	<bmaurer@ximian.com>

2005-03-11  Joe Shaw  <joeshaw@novell.com>
                                                                                
        * NEWS: Update for 0.23.4
                                                                                
        * configure.in: Release 0.23.4

2005-03-11  Joe Shaw  <joeshaw@novell.com>

	* dbus/dbus-connection.c (dbus_connection_send_with_reply): Remove
	this unref; it doesn't match up evenly in some codepaths.
	(_dbus_connection_block_pending_call): Unref at every exitpoint;
	this evenly matches with the ref near the top of this function.
	
2005-03-09  Joe Shaw  <joeshaw@novell.com>

        * NEWS: Update for 0.23.3

        * configure.in: Release 0.23.3

2005-03-09  Joe Shaw  <joeshaw@novell.com>

	* dbus/dbus-object-tree.c
	(_dbus_object_tree_unregister_and_unlock): If checks are enabled
	and we try to unregister a path that's not registered, still go
	through the process of unlocking and don't just return.

2005-03-08  Joe Shaw  <joeshaw@novell.com>

	Fix a bunch of lifecycle and memory management problems
	in the mono bindings.

	* mono/Arguments.cs (Arguments): Implement IDisposable

	* mono/Bus.cs (Bus): Don't allow public instantiation.  This is
	strictly a static class.
